--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,12 +14,18 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField "String", "BASE_URL", "\"https://api.openweathermap.org/data/2.5/\""
+        buildConfigField "String", "API_KEY", "\"f98bb03268bb04a8c158320cf8339711\""
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        targetCompatibility = "8"
+        sourceCompatibility = "8"
     }
 }
 
@@ -41,6 +47,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.14.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     // KOIN
+    implementation "org.koin:koin-android:$koinVersion"
     implementation "org.koin:koin-androidx-scope:$koinVersion"
     implementation "org.koin:koin-androidx-viewmodel:$koinVersion"
     implementation "org.koin:koin-androidx-ext:$koinVersion"
@@ -59,4 +66,7 @@ dependencies {
     implementation "com.jakewharton.rxbinding3:rxbinding-appcompat:$rxBindingVersion"
     implementation "com.jakewharton.rxbinding3:rxbinding-material:$rxBindingVersion"
     implementation "com.jakewharton.rxbinding3:rxbinding-recyclerview:$rxBindingVersion"
+    // For ViewModel
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
 }
